[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/entities/worker/bag.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sfx/Colocar_tuberia.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/Girar_Tuberia.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/LFO_Negativo01_04.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[node name="bag" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="put_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "sfx"

[node name="rotate_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[node name="full_bag_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "sfx"
